fixed whitespace on page issue with Bryan's help, the h1 element in issues solved was bigger than the div it was in, everything is responsive but we need media queries to make it look good on mobile, etc

--- a/css/index.css
+++ b/css/index.css
@@ -229,16 +229,19 @@ html {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  align-items: flex-end;
   width: 100%;
-  padding: 4vw 4vh 2vw;
+  padding: 0.5vw 0.5vh 0vw;
   color: #a89996;
   font-family: Tahoma;
-  font-size: 4.3vw;
+  font-size: 3.5vw;
   font-weight: 700;
   letter-spacing: 6.8px;
   background-color: #5d4640;
   height: 10%;
+}
+.leftDesktop .issuesSolved h1 {
+  max-height: inherit;
+  padding: 0;
 }
 .singleCoMaker {
   width: 11%;
@@ -293,8 +296,7 @@ html {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  max-height: 100vh;
+  height: 100%;
 }
 .rightDesktop .topLogo {
   width: 40%;
@@ -313,7 +315,7 @@ html {
   width: 90%;
   height: 25%;
   padding: 5% 0;
-  margin: 5% auto;
+  margin: 5% auto 0;
 }
 .rightDesktop .textBox h2 {
   font-size: 2vw;
@@ -330,7 +332,7 @@ html {
   border-radius: 30px;
   border: 3px solid black;
   width: 90%;
-  height: 16vw;
+  height: 15vw;
   padding: 0 0 0 2.5%;
   margin: 5% auto;
 }
@@ -370,7 +372,7 @@ html {
   font-size: 3vw;
   font-family: "Palatino Linotype";
   font-weight: 900;
-  line-height: 4rem;
+  line-height: 3vw;
   width: 100%;
   height: 20vh;
 }
